--- a/Day-3/index.html
+++ b/Day-3/index.html
@@ -9,14 +9,21 @@
 </head>
 <body>
     
-    <section class="row">
-        <div class="col">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Vitae magnam alias suscipit tempore molestias voluptas assumenda placeat doloribus, consequatur rem ad fuga minima atque necessitatibus, ipsam veniam numquam commodi! Ducimus consequuntur harum at nesciunt eius excepturi maxime alias tempora. Minus nulla labore eveniet consequuntur officia error quas soluta illo est.</div>
-        <div class="col">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Vitae magnam alias suscipit tempore molestias voluptas assumenda placeat doloribus, consequatur rem ad fuga minima atque necessitatibus, ipsam veniam numquam commodi! Ducimus consequuntur harum at nesciunt eius excepturi maxime alias tempora. Minus nulla labore eveniet consequuntur officia error quas soluta illo est.</div>
-        <div class="col">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Vitae magnam alias suscipit tempore molestias voluptas assumenda placeat doloribus, consequatur rem ad fuga minima atque necessitatibus, ipsam veniam numquam commodi! Ducimus consequuntur harum at nesciunt eius excepturi maxime alias tempora. Minus nulla labore eveniet consequuntur officia error quas soluta illo est.</div>
-        <div class="col">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Vitae magnam alias suscipit tempore molestias voluptas assumenda placeat doloribus, consequatur rem ad fuga minima atque necessitatibus, ipsam veniam numquam commodi! Ducimus consequuntur harum at nesciunt eius excepturi maxime alias tempora. Minus nulla labore eveniet consequuntur officia error quas soluta illo est.</div>
-        <div class="col">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Vitae magnam alias suscipit tempore molestias voluptas assumenda placeat doloribus, consequatur rem ad fuga minima atque necessitatibus, ipsam veniam numquam commodi! Ducimus consequuntur harum at nesciunt eius excepturi maxime alias tempora. Minus nulla labore eveniet consequuntur officia error quas soluta illo est.</div>
-        <div class="col">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Vitae magnam alias suscipit tempore molestias voluptas assumenda placeat doloribus, consequatur rem ad fuga minima atque necessitatibus, ipsam veniam numquam commodi! Ducimus consequuntur harum at nesciunt eius excepturi maxime alias tempora. Minus nulla labore eveniet consequuntur officia error quas soluta illo est.</div>
-        <div class="col">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Vitae magnam alias suscipit tempore molestias voluptas assumenda placeat doloribus, consequatur rem ad fuga minima atque necessitatibus, ipsam veniam numquam commodi! Ducimus consequuntur harum at nesciunt eius excepturi maxime alias tempora. Minus nulla labore eveniet consequuntur officia error quas soluta illo est.</div>
+    <section>
+        <div class="row">
+            <div class="col">Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur autem aperiam dolor mollitia repellendus magnam, odit totam dignissimos repellat inventore ipsum fugiat vero cupiditate voluptatibus voluptatem assumenda quidem. Obcaecati magni eligendi error deleniti inventore dolores, facere fuga repellat. Distinctio adipisci ipsa omnis ullam ratione similique mollitia aspernatur earum ipsam necessitatibus?
+            </div>
+            <div class="col">Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur autem aperiam dolor mollitia repellendus magnam, odit totam dignissimos repellat inventore ipsum fugiat vero cupiditate voluptatibus voluptatem assumenda quidem. Obcaecati magni eligendi error deleniti inventore dolores, facere fuga repellat. Distinctio adipisci ipsa omnis ullam ratione similique mollitia aspernatur earum ipsam necessitatibus?
+            </div>
+            <div class="col">Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur autem aperiam dolor mollitia repellendus magnam, odit totam dignissimos repellat inventore ipsum fugiat vero cupiditate voluptatibus voluptatem assumenda quidem. Obcaecati magni eligendi error deleniti inventore dolores, facere fuga repellat. Distinctio adipisci ipsa omnis ullam ratione similique mollitia aspernatur earum ipsam necessitatibus?
+            </div>
+            <div class="col">Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur autem aperiam dolor mollitia repellendus magnam, odit totam dignissimos repellat inventore ipsum fugiat vero cupiditate voluptatibus voluptatem assumenda quidem. Obcaecati magni eligendi error deleniti inventore dolores, facere fuga repellat. Distinctio adipisci ipsa omnis ullam ratione similique mollitia aspernatur earum ipsam necessitatibus?
+            </div>
+            <div class="col">Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur autem aperiam dolor mollitia repellendus magnam, odit totam dignissimos repellat inventore ipsum fugiat vero cupiditate voluptatibus voluptatem assumenda quidem. Obcaecati magni eligendi error deleniti inventore dolores, facere fuga repellat. Distinctio adipisci ipsa omnis ullam ratione similique mollitia aspernatur earum ipsam necessitatibus?
+            </div>
+            <div class="col">Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur autem aperiam dolor mollitia repellendus magnam, odit totam dignissimos repellat inventore ipsum fugiat vero cupiditate voluptatibus voluptatem assumenda quidem. Obcaecati magni eligendi error deleniti inventore dolores, facere fuga repellat. Distinctio adipisci ipsa omnis ullam ratione similique mollitia aspernatur earum ipsam necessitatibus?
+            </div>
+        </div>
     </section>
     
 </body>
