--- a/Day-5/index.html
+++ b/Day-5/index.html
@@ -10,19 +10,24 @@
 <body>
     <section>
         <div class="row">
-            <img src="./img/img-1.png" alt="" class="col height">
+            <img src="./img/img-1.avif" alt="" class="col height">
         
         <img src="./img/img-2.jpg" alt="" class="col col-md-2 ">
         <img src="./img/img-3.jpg" alt="" class="col col-md-2 ">
 
-        <img src="./img/img-7.png" alt="" class="col height-1">
+        <img src="./img/img-7.avif" alt="" class="col height-1">
 
          <img src="./img/img-4.webp" alt="" class="col col-lg-3 col-md-2 ">
         <img src="./img/img-5.jpg" alt="" class="col col-lg-3 col-md-2 ">
         <img src="./img/img-6.jpg" alt="" class="col col-lg-3 col-md-2 ">
 
+        <img src="./img/img-8.avif" alt="" class="col height-1">
 
 
+         <img src="./img/img-4.webp" alt="" class="col col-xl-4  col-lg-3 col-md-2 ">
+        <img src="./img/img-5.jpg" alt="" class="col col-xl-4  col-lg-3 col-md-2 ">
+        <img src="./img/img-3.jpg" alt="" class="col col-xl-4  col-lg-3 col-md-2 ">
+        <img src="./img/img-2.jpg" alt="" class="col col-xl-4  col-lg-3 col-md-2 ">
         </div>
 
 
